Update google authorisation+ fix  URL
