# src/routers/auth.js
@@ -12,6 +12,9 @@ import { sendResetEmailController } from '../controllers/auth.js';
 import { sendResetEmailSchema } from '../validation/auth.js';
 import { resetPasswordController } from '../controllers/auth.js';
 import { resetPasswordSchema } from '../validation/auth.js';
+import { getGoogleAuthUrlController } from '../controllers/auth.js';
+import { loginWithGoogleOAuthSchema } from '../validation/auth.js';
+import { loginWithGoogleController } from '../controllers/auth.js';
 
 const router = Router();
 
@@ -40,6 +43,14 @@ router.post(
   '/reset-pwd',
   validateBody(resetPasswordSchema),
   ctrlWrapper(resetPasswordController),
+);
+
+router.get('/get-oauth-url', ctrlWrapper(getGoogleAuthUrlController));
+
+router.post(
+  '/confirm-oauth',
+  validateBody(loginWithGoogleOAuthSchema),
+  ctrlWrapper(loginWithGoogleController),
 );
 
 export default router;
